<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".ui.setup.firststep.SetupFirstStepFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_first_step_title"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/text_first_step_instructions_info"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_gang_name_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="27"
            android:ems="12"
            android:gravity="center_horizontal"
            android:hint="@string/text_name_your_gang_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_help_with_name_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_help_with_name_label"
            app:cornerRadius="35dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_cancel_setup"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/button_cancel_setup_label"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next_step_setup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next_step_setup"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:enabled="false"
        android:text="@string/button_next_step_label"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_setup" />

</androidx.constraintlayout.widget.ConstraintLayout>
